# pdf_aux

./: ARCH.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: test_main.py
frontend/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DocumentList.test.tsx  DocumentList.tsx  PDFViewer.test.tsx  PDFViewer.tsx  UploadZone.test.tsx  UploadZone.tsx
frontend/src/types/: documents.ts
