[project]
name = "pdf-aux-backend"
version = "0.1.0"
description = "pdf_aux FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
